welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:23: error: Unmatched closing brace '}' ignored here
		}
                ^ZigZag:33: error: expected class or object definition
def posF():Boolean ={
^ZigZag:44: error: expected start of definition
	override def forward(i:Int)  { 
                 ^ZigZag:47: error: expected start of definition
	override def forward()  {
                 ^ZigZag:50: error: expected start of definition
	override def backward(i:Int) {
                 ^ZigZag:53: error: expected start of definition
	override def backward() {
                 ^ZigZag:56: error: Unmatched closing brace '}' ignored here
}
^