welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code

override def run() {
	var cpt : Int =0
	ecritMessage(cpt);
	droite();

	while(!posF  && getX()<6){
		if(estDosMur){
			for(p<-1 to 3)
			for(k<-1 to 6 ){
			setPos(getX()+1,getY());
			}
			droite();
			setPos(getX(),getY()+1);
			gauche();
			for(k<-1 to 6 ){
			setPos(getX()-1,getY());
			}
			droite();
			setPos(getX(),getY()+1);
			gauche();		
		}
	}
		}
		
	}
		
}





def posF():Boolean ={
	if( getX()== (getMondeLargeur()-1)  && getY()==(getMondeHauteur()-1)){
		return true
	}else{
		return false
	}
}
